linuxmuster-webui7 (7.2.26-testing) lmn72; urgency=medium

  * Widescreen as default display.
  * [session-new] Fix some errors and design issues.

 -- Arnaud Kientz <arnaud@linuxmuster.net>  Sat, 18 Nov 2023 22:42:39 +0100

linuxmuster-webui7 (7.2.25-testinh) lmn72-testing; urgency=medium

  * [session_new] Better design

 -- Arnaud Kientz <arnaud@linuxmuster.net>  Tue, 14 Nov 2023 15:34:46 +0100

linuxmuster-webui7 (7.2.24-testing) lmn72-testing; urgency=medium

  * Partially moving to linuxmuster-tools (new dependency)
  * A lot of fix and view improvements
  * [landingpage] Option to hide webdav box
  * [session_new] Exam mode, share, collect, upload, list files
  * [linbo4] Format with partition command
  * [linbo4] Fix backup restore error
  * [quota] Quota check per user
  * [samba_shares] Fix missing projects and iso shares

 -- Arnaud Kientz <arnaud@linuxmuster.net>  Thu, 09 Nov 2023 14:43:26 +0100

linuxmuster-webui7 (7.2.23) lmn72; urgency=medium

  * Upgrade Ajenti 2.2.7
  * Allow underscore in login
  * [Groupmembership] Exclude a group to be self member 

 -- Arnaud Kientz <arnaud@linuxmuster.net>  Tue, 05 Sep 2023 21:57:19 +0200

linuxmuster-webui7 (7.2.22) lmn72; urgency=medium

  * [ldapreader] Fix missing char for user login
  * [linbo4] Fix wrong diff attribute 

 -- Arnaud Kientz <arnaud@linuxmuster.net>  Wed, 02 Aug 2023 12:31:31 +0200

linuxmuster-webui7 (7.2.21) lmn72; urgency=medium

  * Fix schoolclasses sorting in ldap reader
  * Fix dn and empty responses in ldap reader. 

 -- Arnaud Kientz <arnaud@linuxmuster.net>  Tue, 01 Aug 2023 22:32:50 +0200

linuxmuster-webui7 (7.2.20) lmn72; urgency=medium

  * Fix dependency conflict with Ajenti. 

 -- Arnaud Kientz <arnaud@linuxmuster.net>  Tue, 01 Aug 2023 19:06:38 +0200

linuxmuster-webui7 (7.2.19) lmn72; urgency=medium

  * Fix 2FA authentication
  * [auth] Partially use ldap reader
  * [crontab] Fix permissions of holiday file
  * [crontab] Add possibility to edit crontab as root